--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-class-transition": "^1.0.4"
+	}
 }
